[gd_scene load_steps=3 format=3 uid="uid://cwcedr6jj7yty"]

[ext_resource type="Script" path="res://source/match/hud/UnitMenus.gd" id="1_hugbq"]
[ext_resource type="Theme" uid="uid://bd4ibvqetsafl" path="res://source/match/hud/General.theme" id="2_n560l"]

[node name="UnitMenus" type="PanelContainer"]
script = ExtResource("1_hugbq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BackgroundGrid" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 4

[node name="Panel" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel2" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel3" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel4" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel5" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel6" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel7" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel8" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel9" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel10" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel11" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel12" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel13" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel14" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel15" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Panel16" type="Panel" parent="MarginContainer/BackgroundGrid"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_n560l")

[node name="Buttons" type="GridContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(204, 204)
layout_mode = 2
theme = ExtResource("2_n560l")
columns = 4

[node name="Button00" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button01" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button02" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button03" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button04" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button05" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button06" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button07" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button08" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button09" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button10" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button11" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button12" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button13" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button14" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Button15" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/Buttons/Button00" to="." method="_on_button_00_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button01" to="." method="_on_button_01_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button02" to="." method="_on_button_02_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button03" to="." method="_on_button_03_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button04" to="." method="_on_button_04_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button05" to="." method="_on_button_05_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button06" to="." method="_on_button_06_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button07" to="." method="_on_button_07_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button08" to="." method="_on_button_08_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button09" to="." method="_on_button_09_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button11" to="." method="_on_button_11_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button12" to="." method="_on_button_12_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button13" to="." method="_on_button_13_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button14" to="." method="_on_button_14_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Button15" to="." method="_on_button_15_pressed"]
